--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -39,6 +39,7 @@
 	}
 
 	form {
+		margin: 50px 0;
 		input {
 			font-size: 0.8rem;
 			max-width: 300px;
